--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ color: #eee;
 }
 body.dark a {color: orange; background-color:#000;}
 
+li {list-style-type:none;}
+    
 .header {
 margin: 1em 0 1em 0;
 font-size: 2em;
@@ -227,8 +229,7 @@ top: 20px; right: 20px;}
   <p>These are all experiments, projects and sketches made for fun. All javascript and open source, made from open source ideas. I encourage you to get in touch if you have any interest in these things. If you want me to comment or explain something in a bit more detail. If you want to build on something or do something new. I'm open to any and all ideas.</p>
   <p>Contact : <a href="mailto:contact@io76.com">contact@io76.com</a>.</p>
   <p><a href="http://io76.com">My work.</a></p>
-
-  <h2>Other links</h2>
+<br>
   <p>Soon to be thumbnails added to this list:</p>
   <ul>
     <li><a href="https://type76.com/projects/codepad/">a code pad for starting sketches</a></li>
